--- a/index.html
+++ b/index.html
@@ -1,22 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Báo cáo</title>
-</head>
-
-<body ng-app="form">
-    <div ng-include="'header.html'"></div>
-    <div ng-view>
-
-    </div>
-    <script src="lib/lib/angular.js"></script>
-    <!-- Để sử dụng SPA angularjs: dùng thư viện route -->
-    <script src="lib/lib/angular-route.js"></script>
-    <script src="route.js"></script>
-</body>
-
-</html>
+<div>
+    <a href="Muc4. Ha tang khoi cong 2023.pdf"></a>
+</div>
