--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ha Tang Khoi Cong 2023</title>
+</head>
+<body>
     <a href="Muc4. Ha tang khoi cong 2023.pdf"></a>
-</div>
+</body>
+</html>
